deriving-310/tests/rejected/enum2.ml
(* Enum for sum types with arguments *)
type t = X of int | Y
    deriving (Enum)
